--- a/betapublic/index.html
+++ b/betapublic/index.html
@@ -239,7 +239,7 @@
         <h4>BetaHarvest</h4>
       </div>
       <div class="nav-buttons">
-        <button onclick="location.href='/login'">Login</button>
+        <button onclick="location.href='/login.html'">Login</button>
         <button onclick="location.href='/signup.html'">Signup</button>
       </div>
     </header>
