--- a/betapublic/login.html
+++ b/betapublic/login.html
@@ -3,13 +3,344 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login -BetaHarvest</title>
+    <title>Login - BetaHarvest</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       sizes="64x64"
       href="images/logobeta.svg"
       type="image/x-svg"
     />
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+        background-color: #eceff1;
+        margin: 0;
+        padding-top: 90px;
+      }
+
+      header {
+        background-color: #ffffff;
+        padding: 10px 20px;
+        text-align: left;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        z-index: 1000;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      header .logo {
+        display: flex;
+        align-items: center;
+      }
+
+      header .logo img {
+        height: 50px;
+        padding: 15px;
+      }
+
+      header .logo h3 {
+        margin-left: 10px;
+        font-size: 1.5rem;
+        color: #333;
+      }
+
+      header .home-icon img {
+        height: 40px;
+        padding-right: 30px;
+        cursor: pointer;
+      }
+
+      .form_container {
+        background: #ffffff;
+        padding: 30px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        width: 90%;
+        max-width: 800px;
+        margin: 20px auto;
+        animation: fadeIn 1s ease-in-out;
+      }
+
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+
+      input[type="email"],
+      input[type="password"] {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        box-sizing: border-box;
+      }
+
+      button {
+        background-color: #007bff;
+        color: white;
+        padding: 14px 20px;
+        margin: 10px 0;
+        border: none;
+        cursor: pointer;
+        font-size: medium;
+        width: 100%;
+        border-radius: 5px;
+      }
+
+      button:hover {
+        opacity: 0.8;
+      }
+
+      .container {
+        padding: 16px;
+      }
+
+      ::-webkit-scrollbar {
+        width: 12px;
+      }
+
+      ::-webkit-scrollbar-track {
+        background: #e6f5f0;
+        border-radius: 10px;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        background: #ffffff;
+        border-radius: 10px;
+      }
+
+      ::-webkit-scrollbar-thumb:hover {
+        background: #80a195;
+      }
+
+      .switch-form {
+        color: rgb(0, 0, 0);
+        font-size: 12px;
+        cursor: pointer;
+        text-align: center;
+      }
+
+      .switch-form a {
+        color: #2779f6;
+        text-decoration: none;
+      }
+
+      .switch-form a:hover {
+        text-decoration: underline;
+      }
+
+      .alert {
+        padding: 15px;
+        margin: 15px 0;
+        color: white;
+        background-color: #f44336;
+        border-radius: 5px;
+        text-align: center;
+      }
+
+      .hidden {
+        display: none;
+      }
+
+      .spinner {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        border-top: 4px solid #007bff;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 1s linear infinite;
+        display: none;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      @media (max-width: 768px) {
+        body {
+          padding-top: 150px;
+        }
+
+        header .logo h3 {
+          font-size: 1.2rem;
+        }
+
+        header .home-icon img {
+          height: 30px;
+          padding-right: 15px;
+        }
+
+        .form_container {
+          padding: 20px;
+          width: 95%;
+          margin: 10px auto;
+        }
+
+        input[type="email"],
+        input[type="password"] {
+          padding: 8px;
+          margin: 8px 0;
+        }
+
+        button {
+          padding: 12px 15px;
+          margin: 8px 0;
+        }
+
+        .alert {
+          font-size: 14px;
+          padding: 10px;
+          margin: 10px 0;
+        }
+      }
+    </style>
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <div class="logo">
+        <img src="images/logobeta.svg" alt="BetaHarvest logo" />
+        <h3>BetaHarvest</h3>
+      </div>
+      <a href="index.html" class="home-icon">
+        <img src="images/home.png" alt="Home" />
+      </a>
+    </header>
+    <div class="form_container" id="form_container">
+      <form id="login_form">
+        <div id="error_alert" class="alert hidden">Error message here.</div>
+        <div class="container">
+          <label for="login_email"><b>Email</b></label>
+          <input
+            type="email"
+            placeholder="Enter Email"
+            name="email"
+            id="login_email"
+            required
+          />
+
+          <label for="login_password"><b>Password</b></label>
+          <input
+            type="password"
+            placeholder="Enter Password"
+            name="password"
+            id="login_password"
+            required
+          />
+
+          <button type="submit">Login</button>
+          <p class="switch-form">
+            Not registered? <a href="/signup.html">Signup</a>
+          </p>
+        </div>
+      </form>
+    </div>
+    <div class="spinner" id="spinner"></div>
+
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+      import {
+        getAuth,
+        signInWithEmailAndPassword,
+      } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyBYhzRyNuh7NWh8YXIdHyuwZHE_fIZGX9Y",
+        authDomain: "mybetaharvest.firebaseapp.com",
+        projectId: "mybetaharvest",
+        storageBucket: "mybetaharvest.appspot.com",
+        messagingSenderId: "370925949496",
+        appId: "1:370925949496:web:6fe3dea100315059f40ccd",
+        measurementId: "G-BE44KWEGR2",
+      };
+
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+
+      let login_email = document.getElementById("login_email");
+      let login_password = document.getElementById("login_password");
+      let login_form = document.getElementById("login_form");
+
+      let LoginUser = (evt) => {
+        evt.preventDefault();
+        spinner.style.display = "block";
+
+        signInWithEmailAndPassword(
+          auth,
+          login_email.value,
+          login_password.value
+        )
+          .then(async (userCredential) => {
+            const user = userCredential.user;
+            if (user.emailVerified) {
+              const ref = doc(db, "UserAuthList", user.uid);
+              const docSnap = await getDoc(ref);
+
+              if (docSnap.exists()) {
+                const userData = docSnap.data();
+                sessionStorage.setItem("userID", user.uid);
+                sessionStorage.setItem("userFullname", userData.fullname);
+                sessionStorage.setItem("userEmail", userData.Email);
+                sessionStorage.setItem("userAddress", userData.address);
+                sessionStorage.setItem("userCrop", userData.crop);
+                sessionStorage.setItem("userState", userData.state);
+                sessionStorage.setItem("userCountry", userData.country);
+
+                const messageDiv = document.createElement("div");
+                messageDiv.className = "success-message";
+                messageDiv.textContent = "Login successful!";
+                document.body.appendChild(messageDiv);
+                setTimeout(() => document.body.removeChild(messageDiv), 3000);
+
+                // Redirect to user dashboard or another page
+                window.location.href = "dashboard.html";
+              } else {
+                displayAlert("No such document!");
+              }
+            } else {
+              displayAlert("Email not verified. Please check your inbox.");
+            }
+            spinner.style.display = "none";
+          })
+          .catch((error) => {
+            displayAlert("Login failed: " + error.message);
+            spinner.style.display = "none";
+            console.log(error.code, error.message);
+          });
+
+        function displayAlert(message) {
+          const alertBox = document.getElementById("error_alert");
+          alertBox.textContent = message;
+          alertBox.classList.remove("hidden");
+          setTimeout(() => {
+            alertBox.classList.add("hidden");
+          }, 5000);
+        }
+      };
+
+      login_form.addEventListener("submit", LoginUser);
+    </script>
+  </body>
 </html>
