--- a/betapublic/index.html
+++ b/betapublic/index.html
@@ -239,8 +239,8 @@
         <h4>BetaHarvest</h4>
       </div>
       <div class="nav-buttons">
-        <button onclick="location.href='/login.html'">Login</button>
-        <button onclick="location.href='/signup.html'">Signup</button>
+        <button onclick="location.href='login.html'">Login</button>
+        <button onclick="location.href='signup.html'">Signup</button>
       </div>
     </header>
     <main>
