--- a/betapublic/signup.html
+++ b/betapublic/signup.html
@@ -20,6 +20,7 @@
         background-color: #eceff1;
         margin: 0;
         padding-top: 90px;
+        transition: background-color 0.3s ease;
       }
 
       header {
@@ -33,6 +34,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease;
       }
 
       header .logo {
@@ -43,6 +46,11 @@
       header .logo img {
         height: 50px;
         padding: 15px;
+        transition: transform 0.3s ease;
+      }
+
+      header .logo img:hover {
+        transform: scale(1.1);
       }
 
       header .logo h3 {
@@ -55,6 +63,11 @@
         height: 40px;
         padding-right: 50px;
         cursor: pointer;
+        transition: transform 0.3s ease;
+      }
+
+      header .home-icon img:hover {
+        transform: scale(1.1);
       }
 
       .form_container {
@@ -63,17 +76,25 @@
         border-radius: 12px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         width: 90%;
-        max-width: 800px;
+        max-width: 600px;
         margin: 20px auto;
         animation: fadeIn 1s ease-in-out;
+        transition: all 0.3s ease;
+      }
+
+      .form_container:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
       }
 
       @keyframes fadeIn {
         0% {
           opacity: 0;
+          transform: translateY(20px);
         }
         100% {
           opacity: 1;
+          transform: translateY(0);
         }
       }
 
@@ -84,12 +105,20 @@
       input[type="number"],
       select {
         width: 100%;
-        padding: 10px;
+        padding: 12px;
         margin: 10px 0;
         display: inline-block;
         border: 1px solid #ccc;
         border-radius: 10px;
         box-sizing: border-box;
+        transition: all 0.3s ease;
+      }
+
+      input:focus,
+      select:focus {
+        outline: none;
+        border-color: #007bff;
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
       }
 
       button {
@@ -102,10 +131,12 @@
         font-size: medium;
         width: 100%;
         border-radius: 5px;
+        transition: all 0.3s ease;
       }
 
       button:hover {
-        opacity: 0.8;
+        background-color: #0056b3;
+        transform: translateY(-2px);
       }
 
       .container {
@@ -122,42 +153,57 @@
       }
 
       ::-webkit-scrollbar-thumb {
-        background: #ffffff;
+        background: #80a195;
         border-radius: 10px;
+        transition: background 0.3s ease;
       }
 
       ::-webkit-scrollbar-thumb:hover {
-        background: #80a195;
+        background: #648b7e;
       }
 
       .switch-form {
         color: rgb(0, 0, 0);
-        font-size: 12px;
+        font-size: 14px;
         cursor: pointer;
         text-align: center;
+        margin-top: 20px;
       }
 
       .switch-form a {
         color: #2779f6;
         text-decoration: none;
+        transition: all 0.3s ease;
       }
 
       .switch-form a:hover {
+        color: #0056b3;
         text-decoration: underline;
       }
 
       .success-message {
         background-color: #4caf50;
         color: white;
-        padding: 10px;
+        padding: 15px;
         text-align: center;
         font-size: 16px;
         border-radius: 5px;
-        position: absolute;
+        position: fixed;
         top: 20%;
         left: 50%;
         transform: translate(-50%, -50%);
         width: 300px;
+        animation: slideDown 0.5s ease-out;
+        z-index: 1001;
+      }
+
+      @keyframes slideDown {
+        0% {
+          transform: translate(-50%, -100%);
+        }
+        100% {
+          transform: translate(-50%, -50%);
+        }
       }
 
       .alert {
@@ -167,6 +213,27 @@
         background-color: #f44336;
         border-radius: 5px;
         text-align: center;
+        animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+      }
+
+      @keyframes shake {
+        10%,
+        90% {
+          transform: translate3d(-1px, 0, 0);
+        }
+        20%,
+        80% {
+          transform: translate3d(2px, 0, 0);
+        }
+        30%,
+        50%,
+        70% {
+          transform: translate3d(-4px, 0, 0);
+        }
+        40%,
+        60% {
+          transform: translate3d(4px, 0, 0);
+        }
       }
 
       .hidden {
@@ -174,7 +241,7 @@
       }
 
       .spinner {
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -185,20 +252,25 @@
         height: 40px;
         animation: spin 1s linear infinite;
         display: none;
+        z-index: 1002;
       }
 
       @keyframes spin {
         0% {
-          transform: rotate(0deg);
+          transform: translate(-50%, -50%) rotate(0deg);
         }
         100% {
-          transform: rotate(360deg);
+          transform: translate(-50%, -50%) rotate(360deg);
         }
       }
 
       @media (max-width: 768px) {
         body {
-          padding-top: 150px;
+          padding-top: 80px;
+        }
+
+        header {
+          padding: 5px 10px;
         }
 
         header .logo h3 {
@@ -207,7 +279,7 @@
 
         header .home-icon img {
           height: 30px;
-          padding-right: 50px;
+          padding-right: 20px;
         }
 
         .form_container {
@@ -222,7 +294,7 @@
         input[type="date"],
         input[type="number"],
         select {
-          padding: 8px;
+          padding: 10px;
           margin: 8px 0;
         }
 
@@ -234,7 +306,7 @@
         .success-message {
           font-size: 14px;
           width: 250px;
-          padding: 8px;
+          padding: 12px;
         }
 
         .alert {
