--- a/betapublic/crop_detail.html
+++ b/betapublic/crop_detail.html
@@ -21,58 +21,42 @@
         flex-direction: column;
         min-height: 100vh;
       }
-
-      .app-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding-top: 80px;
-        flex-grow: 1;
-      }
-
       header {
         background-color: #ffffff;
         padding: 10px 20px;
+        text-align: left;
         width: 100%;
         position: fixed;
         top: 0;
-        left: 0;
         z-index: 1000;
         display: flex;
         justify-content: space-between;
         align-items: center;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        box-sizing: border-box;
       }
-
       header .logo {
         display: flex;
         align-items: center;
       }
-
       header .logo img {
         height: 50px;
         padding: 15px;
       }
-
       header .logo h3 {
         margin-left: 10px;
         font-size: 1.5rem;
         color: #333;
       }
-
       header .home-icon img {
         height: 40px;
         padding-right: 30px;
         cursor: pointer;
       }
-
       .settings-icon {
         border: none;
         background: none;
         padding: 0;
-        padding-right: 20px;
+        padding-right: 40px;
         margin: 0;
         cursor: pointer;
       }
@@ -120,7 +104,6 @@
       .settings-menu a:hover {
         background-color: #f0f4f8;
       }
-
       main {
         display: flex;
         flex-direction: column;
