--- a/betapublic/crop_detail.html
+++ b/betapublic/crop_detail.html
@@ -104,20 +104,18 @@
       .settings-menu a:hover {
         background-color: #f0f4f8;
       }
+
       main {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
         padding: 20px;
-        margin-top: 80px;
-        max-width: 600px;
-        width: 100%;
-        text-align: center;
+        margin-top: 90px;
+        flex-grow: 1;
       }
 
       .output-container {
-        display: none; /* Initially hide the output container */
+        display: none;
         margin-top: 20px;
         width: 100%;
         max-width: 600px;
@@ -137,7 +135,7 @@
         display: flex;
         margin-top: 20px;
         width: 100%;
-        max-width: 400px;
+        max-width: 300px;
       }
 
       input[type="text"] {
