--- a/betapublic/crop_detail.html
+++ b/betapublic/crop_detail.html
@@ -128,7 +128,9 @@
 
       h1 {
         text-align: center;
-        color: #333;
+        font-family: var(--font-copernicus), ui-serif, Georgia, "Cambria",
+          "Times New Roman", Times, serif;
+        color: #423535;
       }
 
       .search-container {
