--- a/betapublic/farmer-log.html
+++ b/betapublic/farmer-log.html
@@ -303,8 +303,7 @@
           </button>
           <div class="settings-menu" id="settingsMenu">
             <a href="dashboard.html">Dashboard</a>
-            <a href="profile.html">Profile</a>
-            <a href="profile.html">Crops Details</a>
+            <a href="crop_detail.html">Crops Details</a>
             <a href="farmer-log.html">Farm Log</a>
             <a href="bot.html">ChatBot</a>
             <a href="index.html" onclick="sessionStorage.clear();">Logout</a>
